--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -13,33 +13,37 @@
         <li>
             <a href="/" class="menu-item {% if request.path == '/' %}active{% endif %}">
                 <i class="fas fa-home"></i>
-                <span>Главная</span>
+                <span class="menu-text">Главная</span>
             </a>
         </li>
         <li>
             <a href="{% url 'statistics_page' %}" class="menu-item {% if 'statistics' in request.path %}active{% endif %}">
                 <i class="fas fa-chart-bar"></i>
-                <span>Статистика</span>
+                <span class="menu-text">Статистика</span>
             </a>
         </li>
         <li>
             <a href="{% url 'product_list' %}" class="menu-item {% if 'products' in request.path %}active{% endif %}">
                 <i class="fas fa-boxes"></i>
-                <span>Товары</span>
+                <span class="menu-text">Товары</span>
             </a>
         </li>
 
         <li>
             <a href="{% url 'archive_page' %}" class="menu-item {% if 'archive' in request.path %}active{% endif %}">
                 <i class="fas fa-archive"></i>
-                <span>Архив заказов</span>
+                <span class="menu-text">Архив заказов</span>
             </a>
         </li>
         <li>
-                <a href="{% url 'settings_page' %}" class="menu-item {% if 'settings' in request.path %}active{% endif %}">
-                    <i class="fas fa-cog"></i>
-                    <span>Настройки</span>
-                </a>
-            </li>
+            <a href="{% url 'settings_page' %}" class="menu-item {% if 'settings' in request.path %}active{% endif %}">
+                <i class="fas fa-cog"></i>
+                <span class="menu-text">Настройки</span>
+            </a>
+        </li>
     </ul>
-</nav>
+
+    <button class="sidebar-toggle-btn" id="sidebarToggleBtn">
+        <i class="fas fa-chevron-left"></i>
+    </button>
+    </nav>
